# octordle_solver

./: .coverage  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  BLOG_NOTES.md  CHANGELOG.md  README.md  auto_play.py  get_best_group.py  play_game.py  pyproject.toml  pytest.ini  ruff.toml  runner.py  scratch_pad.py  solver.py  ui.py  wordle_answers_frequency_letter.txt
.github/workflows/: run_tests.yml
benchmarks/: benchmark_solver.py
crates/octordle_solver_rs/: Cargo.toml  pyproject.toml
crates/octordle_solver_rs/src/: lib.rs  solver.rs
data/: 5_letter_words_frequency_letter.txt  5_letter_words_spellchecked.txt  5_letter_words_spellchecked_frequencies_letter.txt  count_frequencies.py  not_plural_spellchecked.txt  plural_spellchecked.txt  process_words.py  valid_answers.txt
dev-docs/plans/: 2026-06-30-wordle-web-ui.md
docs/: index.html
docs/assets/: index-Cq66C1rY.js  index-DUPIRJGG.css  index-zRfAY_Vo.js
docs/plans/: 2026-06-30-wordle-web-ui.md
requirements/: all.txt  dev.txt
src/octordle_solver/: __init__.py  backend.py  cli.py  constants.py  dictionary.py  game.py  generate_groups.py  solver.py  utils.py
src/octordle_solver/data/: 5_letter_words_spellchecked.txt  best_second_guesses.json  boggle.py  compute_best_second_guess.py  count_frequencies.py  just_say_venn.py  license_plate.py  not_plural.txt  parse_plural_words.py  (+10 more)
tests/: test_compute_best_second_guess.py  test_dictionary.py  test_filter.py  test_generate_groups.py  test_octordle_solver_ui.py  test_rust_solver.py  test_solver.py  test_threading.py  test_threads.py  test_ui_helpers.py  test_utils.py  test_wordle_solver_ui.py
web/: index.html  package-lock.json  style.css  tsconfig.json
web/src/: app.ts
wordle_solver/: dictionary.py  game.py  generate_groups.py  solver.py  utils.py
(+6 files in other folders)
