[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octordle_solver"
version = "0.1.0"
authors = [{name = "Gabe Reed", email = "gabrieljreed@gmail.com"}]
description = "Python package for solving Wordle and Octordle puzzles"
keywords = []
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["colorama", "Pyside6", "pyperclip"]

[tool.setuptools]
package-data = { "octordle_solver" = ["data/*"] }

[tool.isort]
profile = "black"

[project.urls]
"Homepage" = "https://github.com/gabrieljreed/octordle_solver"
"Bug Tracker" = "https://github.com/gabrieljreed/octordle_solver/issues"

[project.scripts]
wordle-solver-ui = "octordle_solver.ui.launch_ui:wordle"
octordle-solver-ui = "octordle_solver.ui.launch_ui:octordle"
