[package]
name = "octordle_solver_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "octordle_solver_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
